<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Tower Defense</string>

    <!-- Home Screen Menu -->
    <string name="title_singe_player">Single Player</string>
    <string name="title_multiplayer">Multiplayer</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_high_scores">High Scores</string>
    <string name="title_settings">Game Settings</string>

    <!-- Googleplay Sign in -->
    <!--<string name="signing_in">Signing in with Google</string>-->
    <!--<string name="signing_out">Signing out</string>-->
    <string name="google_game_api" translatable="false">123</string>
    <string name="sign_in_explanation">Sign with Google to upload your achievements and share with friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign Out</string>

    <!-- HUD -->
    <string name="hud_score">Score : </string>
    <string name="hud_money">Money : </string>
    <string name="hud_health">Health : </string>


</resources>
