<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/home_screen_bg"
              tools:context=".MainActivity">

    <TextView
            android:id="@+id/home_screen_title"
            android:text="@string/app_name"
            style="@style/Title" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="bottom|left"
                android:layout_height="wrap_content">

            <ImageButton
                    android:id="@+id/btn_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/settings"
                    android:background="@null" />
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

            <Button
                    android:id="@+id/btn_single_player"
                    android:text="@string/title_singe_player"
                    style="@style/HomeScreenButton" />

            <Button
                    android:id="@+id/btn_multiplayer"
                    android:text="@string/title_multiplayer"
                    style="@style/HomeScreenButton" />

            <Button
                    android:id="@+id/btn_achievements"
                    android:text="@string/title_achievements"
                    style="@style/HomeScreenButton" />

            <Button
                    android:id="@+id/btn_high_score"
                    android:text="@string/title_high_scores"
                    style="@style/HomeScreenButton" />

        </LinearLayout>
    </LinearLayout>

    <!-- SIGN-IN BAR -->
    <LinearLayout
            android:id="@+id/sign_in_bar"
            style="@style/SignInOutBar">

        <Button
            android:id="@+id/button_sign_in"
            style="@style/SignInButton" />

        <!--com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            style="@style/SignInButton" /-->

        <TextView
                style="@style/SignInOutBarBlurb"
                android:text="@string/sign_in_explanation" />
    </LinearLayout>

    <!-- SIGN-OUT BAR -->
    <LinearLayout
            android:id="@+id/sign_out_bar"
            style="@style/SignInOutBar"
            android:visibility="gone">

        <TextView
                style="@style/SignInOutBarBlurb"
                android:text="@string/you_are_signed_in" />

        <Button
                style="@style/SignOutButton"
                android:id="@+id/button_sign_out"
                android:text="@string/sign_out" />

    </LinearLayout>
</LinearLayout>
